# gitig

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  color.rs  command.rs  commands.rs  config.rs  db.rs  error.rs  git.rs  main.rs  message.rs  utils.rs
src/commands/: delete.rs  edit.rs  list.rs  switch.rs  view.rs
src/utils/: git.rs  message.rs  profile.rs  re_exports.rs
