[package]
name = "gitig"
version = "0.3.0"
edition = "2021"
authors = ["sqrtox"]
license = "MIT"
description = "A tool to manage git user settings with profiles."

[dependencies]
clap = { version = "4.5.11", features = ["derive"] }
colored = "2.1.0"
edit = "0.1.5"
gix-config = "0.38.0"
platform-dirs = "0.3.0"
rusqlite = "0.32.1"
thiserror = "1.0.63"

[profile.release]
strip = true
